[package]
name = "qortoo"
version = "0.1.0"
edition = "2024"
# Except for the first time, the rust version will be kept at least one year behind the latest release and update it quarterly.
rust-version = "1.87.0"

[features]
default = []
tracing = [
    "dep:libc",
    "dep:once_cell",
    "dep:tracing-subscriber",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:ctor",
]

[dependencies]
# optional
libc = { version = "^0.2.180", optional = true }
once_cell = { version = "^1.21.3", optional = true }
tracing-subscriber = { version = "^0.3.22", features = [
    "json",
    "fmt",
    "env-filter",
], optional = true }
opentelemetry_sdk = { version = "^0.31.0", optional = true }
opentelemetry-otlp = { version = "^0.31.0", features = [
    "grpc-tonic",
], optional = true }
ctor = { version = "^0.6.3", optional = true }

tracing = "^0.1.44"
nanoid = "^0.4.0"
tokio = { version = "^1.49.0", features = ["full"] }
parking_lot = "^0.12.5"
time = { version = "^0.3.45", features = [
    "formatting",
    "local-offset",
    "macros",
] }
itoa = "^1.0.17"
derive_more = { version = "^2.1.1", features = ["display", "debug"] }
chrono = "^0.4.43"
thiserror = "^2.0.17"
opentelemetry = { version = "^0.31.0" }
tracing-opentelemetry = { version = "^0.32.1" }
ubyte = "^0.10.4"
crossbeam-channel = "^0.5.15"
futures = "^0.3.28"
btparse = "^0.2.0"
strum_macros = "^0.27.2"
regex = "^1.12.2"
dyn-fmt = "^0.4.3"

[dev-dependencies]
rstest = "^0.26.1"
awaitility = "^0.4.1"
tokio = { version = "^1.48.0", features = ["full", "test-util"] }
