[package]
name = "qortoo"
version = "0.1.0"
edition = "2024"
# Except for the first time, the rust version will be kept at least one year behind the latest release and update it quarterly.
rust-version = "1.87.0"

[features]
default = []
test = ["log_layer"]
log_layer = [
    "dep:tracing-subscriber",
]

[dependencies]
# Feature-gated by `log_layer`.
tracing-subscriber = { version = "^0.3.23", features = [
    "json",
    "fmt",
    "env-filter",
], optional = true }

tracing = "^0.1.44"
nanoid = "^0.5.0"
tokio = { version = "^1.52.2", features = ["full"] }
parking_lot = "^0.12.5"
time = { version = "^0.3.47", features = [
    "formatting",
    "local-offset",
    "macros",
] }
itoa = "^1.0.18"
derive_more = { version = "^2.1.1", features = ["display", "debug"] }
chrono = "^0.4.44"
thiserror = "^2.0.18"
opentelemetry = { version = "^0.31.0" }
tracing-opentelemetry = { version = "^0.32.1" }
ubyte = "^0.10.4"
crossbeam-channel = "^0.5.15"
futures = "^0.3.32"
btparse = "^0.2.0"
strum_macros = "^0.28.0"
regex = "^1.12.3"
dyn-fmt = "^0.4.3"
backon = { version = "^1.6.0", default-features = false, features = ["tokio-sleep"] }
metrics = "^0.24"

[[example]]
name = "log"
path = "examples/observability/log.rs"

[[example]]
name = "metrics"
path = "examples/observability/metrics.rs"

[[example]]
name = "profile"
path = "examples/observability/profile.rs"

[[example]]
name = "trace"
path = "examples/observability/trace.rs"

[dev-dependencies]
rstest = "^0.26.1"
awaitility = "^0.4.1"
tokio = { version = "^1.52.2", features = ["full", "test-util"] }
metrics-util = { version = "^0.20.3", features = ["debugging"] }
serial_test = "^3.4"
tracing-subscriber = { version = "^0.3.23", features = [
    "json",
    "fmt",
    "env-filter",
] }
ctor = "^1.0.1"
tracing-loki = "^0.2"
url = "^2.5"
metrics-exporter-prometheus = "^0.18.3"
libc = { version = "^1.0.0-alpha.3"}
once_cell = { version = "^1.21.4"}
opentelemetry_sdk = { version = "^0.31"}
opentelemetry-otlp = { version = "^0.31", features = [
    "grpc-tonic",
]}
pyroscope = { version = "^2.0.3", features = ["backend-pprof-rs"] }
