[package]
name = "qortoo"
version = "0.1.0"
edition = "2024"
# Except for the first time, the rust version will be kept at least one year behind the latest release and update it quarterly.
rust-version = "1.87.0"

[features]
default = []
test = ["log_layer"]
log_layer = [
    "dep:tracing-subscriber",
]

[dependencies]
# Feature-gated by `log_layer`.
tracing-subscriber = { version = "^0.3.23", features = [
    "json",
    "fmt",
    "env-filter",
], optional = true }

tracing = "^0.1.44"
nanoid = "^0.5.0"
tokio = { version = "^1.52", features = ["full"] }
parking_lot = "^0.12"
time = { version = "^0.3", features = [
    "formatting",
    "local-offset",
    "macros",
] }
itoa = "^1.0"
derive_more = { version = "^2.1", features = ["display", "debug"] }
chrono = "^0.4"
thiserror = "^2.0"
opentelemetry = { version = "^0.32" }
tracing-opentelemetry = { version = "^0.33" }
ubyte = "^0.10"
crossbeam-channel = "^0.5"
futures = "^0.3"
btparse = "^0.2"
strum_macros = "^0.28"
regex = "^1.12"
dyn-fmt = "^0.4"
backon = { version = "^1.6", default-features = false, features = ["tokio-sleep"] }
metrics = "^0.24"

[[example]]
name = "log"
path = "examples/observability/log.rs"

[[example]]
name = "metrics"
path = "examples/observability/metrics.rs"

[[example]]
name = "profile"
path = "examples/observability/profile.rs"

[[example]]
name = "trace"
path = "examples/observability/trace.rs"

[dev-dependencies]
rstest = "^0.26"
awaitility = "^0.4"
tokio = { version = "^1.52", features = ["full", "test-util"] }
metrics-util = { version = "^0.20", features = ["debugging"] }
serial_test = "^3.5"
tracing-subscriber = { version = "^0.3", features = [
    "json",
    "fmt",
    "env-filter",
] }
ctor = "^1.0"
tracing-loki = "^0.2"
url = "^2.5"
metrics-exporter-prometheus = "^0.18"
libc = { version = "^1.0.0-alpha.3"}
once_cell = { version = "^1.21"}
opentelemetry_sdk = { version = "0.32" }
opentelemetry-otlp = { version = "0.32", features = [
    "grpc-tonic",
]}
pyroscope = { version = "^2.0", features = ["backend-pprof-rs"] }
